[gd_scene load_steps=13 format=3 uid="uid://dgjqgejarymyf"]

[ext_resource type="Script" path="res://scripts/towers/tower.gd" id="1_2s5pq"]
[ext_resource type="Texture2D" uid="uid://dwfjyibh20ggu" path="res://assets/art/circle.png" id="2_70rmy"]
[ext_resource type="Texture2D" uid="uid://brywjm8gh35me" path="res://assets/art/turrets/basic/normal_base.png" id="3_3xru3"]
[ext_resource type="Texture2D" uid="uid://dpgwt7lenl8lw" path="res://assets/art/turrets/basic/normal-sheet.png" id="4_o731c"]
[ext_resource type="Script" path="res://scripts/sfx.gd" id="5_u6h4u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwxuf"]
radius = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yboyn"]
atlas = ExtResource("4_o731c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_133tg"]
atlas = ExtResource("4_o731c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa0vg"]
atlas = ExtResource("4_o731c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhjwa"]
atlas = ExtResource("4_o731c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqfo7"]
atlas = ExtResource("4_o731c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aem4s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yboyn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_133tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa0vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhjwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqfo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yboyn")
}],
"loop": false,
"name": &"shoot",
"speed": 20.0
}]

[node name="Tower" type="Node2D"]
script = ExtResource("1_2s5pq")

[node name="Range" type="Area2D" parent="."]
collision_layer = 2049
collision_mask = 2049

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
visible = false
shape = SubResource("CircleShape2D_pwxuf")

[node name="Sprite2D" type="Sprite2D" parent="Range"]
modulate = Color(1, 1, 1, 0.117647)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_70rmy")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.605255, 0.126051, 0.15991, 1)

[node name="BaseSprite" type="Sprite2D" parent="."]
position = Vector2(-6, 0)
texture = ExtResource("3_3xru3")

[node name="TurretSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aem4s")
animation = &"shoot"
frame = 5
frame_progress = 1.0
offset = Vector2(-6, 0)

[node name="Marker2D" type="Marker2D" parent="TurretSprite"]
position = Vector2(-16, 0)

[node name="ShootTimer" type="Timer" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
script = ExtResource("5_u6h4u")

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
